--- a/prfdb.conf
+++ b/prfdb.conf
@@ -1,10 +1,10 @@
+checks = 0
 db = 'prfdb_test'
-#db = 'prfdb07'
-base = "${HOME}"
-prefix = "$(base)/prfdb07"
+base = "/home/prfdb"
+prefix = "$(base)"
 queue_table = "queue"
-seqlength = 99    ## The maximum structure size to be examined, add 1.
-host = 'prfdb.no-ip.org' ## Mysql database hostname
+max_struct_length = 99    ## The maximum structure size to be examined, add 1.
+host = 'localhost' ## Mysql database hostname
 user = 'trey'           ## Mysql username
 pass = 'Iactilm2'       ## Mysql password
 basedir = $(prefix)
@@ -37,12 +37,11 @@ zcat = 'zcat'           ## Location of zcat (rename to gzcat for OSX)
 INCLUDE_PATH = 'html/'  ## Template directory for html templates
 INTERPOLATE = 1         ## Template interpolation of variables
 POST_CHOMP = 1          ## Template get rid of newlines
-PRE_PROCESS = 'header'  ## Template html headers
+PRE_PROCESS = 'header.html'  ## Template html headers
 EVAL_PERL = 1           ## Template evaluate inline perl code
 ABSOLUTE = 1
 action = 'die'
-#                      descriptor_template => "$prefix/descr/template.desc",  ## Rnamotif template descriptor file
-descriptor_file = "$(prefix)/descr/template.desc"  ## Rnamotif descriptor output
+rnamotif_template = "$(prefix)/descr/rnamotif_template"  ## Rnamotif descriptor output
 slip_site_1 = '^n\{3\}$' ## Rnamotif first 3 bases of slippery site
 slip_site_2 = '^w\{3\}$' ## Rnamotif bases 4-6 of slippery site
 slip_site_3 = '^h\{3\}$' ## Rnamotif bases 7-9 of slippery site
