--- a/prfdb.conf
+++ b/prfdb.conf
@@ -1,6 +1,6 @@
 checks = 0
 db = 'prfdb_test'
-base = "/home/prfdb"
+base = "/home/prfdb_beta"
 prefix = "$(base)"
 queue_table = "queue"
 max_struct_length = 99    ## The maximum structure size to be examined, add 1.
