--- a/prfdb.conf
+++ b/prfdb.conf
@@ -4,7 +4,7 @@ base = "/home/prfdb_beta"
 prefix = "$(base)"
 queue_table = "queue"
 max_struct_length = 99    ## The maximum structure size to be examined, add 1.
-host = 'localhost' ## Mysql database hostname
+host = '' ## Mysql database hostname
 user = 'trey'           ## Mysql username
 pass = 'Iactilm2'       ## Mysql password
 basedir = $(prefix)
