Now have separate modules for printing mRNA and selecting species

--- a/prfdb_test.conf
+++ b/prfdb_test.conf
@@ -2,7 +2,7 @@ NameVirtualHost 128.8.164.63:80
 <VirtualHost  128.8.164.63:80>
  ServerName prfdb_test.umd.edu
  RewriteEngine On
- DocumentRoot /usr/local/prfdb
+ DocumentRoot /usr/local/prfdb/prfdb_test
  DirectoryIndex index.html
  DeflateCompressionLevel 4
  DeflateMemLevel 9
