--- a/prfdb_test.conf
+++ b/prfdb_test.conf
@@ -43,7 +43,10 @@ Alias / "/usr/local/prfdb/prfdb_test/"
  PerlHandler PRFdb::Handler
 # PerlHandler HTML::Mason
 </LocationMatch>
-
+<LocationMatch "(\.svg|\.png)$">
+ SetOutputFilter DEFLATE
+ SetHandler default-handler
+</LocationMatch>
 <LocationMatch "(\.m(html|txt|pl)|dhandler|autohandler)$">
 # SetOutputFilter DEFLATE
  SetHandler perl-script
