split refresh out

--- a/prfdb_test.conf
+++ b/prfdb_test.conf
@@ -37,7 +37,7 @@ Alias / "/usr/local/prfdb/prfdb_test/"
 <Directory /usr/local/prfdb/prfdb_test>
  DirectoryIndex index.html
 </Directory>
-<LocationMatch "(\.html|\.txt|\.pl)$">
+<LocationMatch "(\.html|\.txt|\.pl|\.js)$">
  SetOutputFilter DEFLATE
  SetHandler perl-script
  PerlHandler PRFdb::Handler
