Fixed up Blast searching, Added multiple matches on search, fixed some more prf_daemon bugs from the new config system

--- a/prfdb_test.conf
+++ b/prfdb_test.conf
@@ -1,6 +1,6 @@
 NameVirtualHost 128.8.164.63:80
 <VirtualHost  128.8.164.63:80>
- ServerName prfdb_test.umd.edu
+ ServerName prfdb.umd.edu
  RewriteEngine On
  DocumentRoot /usr/local/prfdb/prfdb_test
  DirectoryIndex index.html
