--- a/prfdb_httpd.conf
+++ b/prfdb_httpd.conf
@@ -1,57 +1,43 @@
-NameVirtualHost 128.8.164.63:80
-<VirtualHost  128.8.164.63:80>
- ServerName prfdb.umd.edu
- RewriteEngine On
- DocumentRoot /usr/local/prfdb/prfdb_test
- DirectoryIndex index.html
- DeflateCompressionLevel 4
- DeflateMemLevel 9
- DeflateWindowSize 15
- AddType image/svg+xml .svg
- AddType image/svg+xml .svgz
- PerlRequire /usr/local/prfdb/prfdb_test/handler.pl
- SetOutputFilter DEFLATE
-# <Location />
-#  SetHandler perl-script
-#  PerlHandler HTML::Mason::ApacheHandler
-#  PerlResponseHandler ModPerl::Registry
-#</Location>
-
+DocumentRoot ${PRFDB_HOME}
+DirectoryIndex index.html
+DeflateCompressionLevel 4
+DeflateMemLevel 9
+DeflateWindowSize 15
+AddType image/svg+xml .svg
+AddType image/svg+xml .svgz
+PerlPassEnv PRFDB_HOME
+PerlRequire ${PRFDB_HOME}/handler.pl
+SetOutputFilter DEFLATE
 <Location /images>
   SetHandler default
 </Location>
-<Directory /usr/local/prfdb>
+<Directory ${PRFDB_HOME}>
  Options +Indexes
 </Directory>
-<Directory /usr/local/prfdb/*/images>
+<Directory ${PRFDB_HOME}/*/images>
  SetOutputFilter DEFLATE
  SetHandler default-handler
  Options -ExecCGI -Indexes
 </Directory>
-<Directory /usr/local/prfdb/*/html>
+<Directory ${PRFDB_HOME}/*/html>
  SetOutputFilter DEFLATE
  SetHandler default-handler
  Options -ExecCGI -Indexes
 </Directory>
-Alias / "/usr/local/prfdb/prfdb_test/"
-#PerlResponseHandler PRFdb::Handler
-<Directory /usr/local/prfdb/prfdb_test>
+Alias / "${PRFDB_HOME}/"
+<Directory ${PRFDB_HOME}>
  DirectoryIndex index.html
 </Directory>
 <LocationMatch "(\.html|\.txt|\.pl|\.js)$">
  SetOutputFilter DEFLATE
  SetHandler perl-script
  PerlHandler PRFdb::Handler
-# PerlHandler HTML::Mason
 </LocationMatch>
 <LocationMatch "(\.svg|\.png)$">
  SetOutputFilter DEFLATE
  SetHandler default-handler
 </LocationMatch>
 <LocationMatch "(\.m(html|txt|pl)|dhandler|autohandler)$">
-# SetOutputFilter DEFLATE
  SetHandler perl-script
  PerlInitHandler Apache::Constants::NOT_FOUND
 </LocationMatch>
-
-</VirtualHost>
