A better handler and config system

--- a/prfdb_httpd.conf
+++ b/prfdb_httpd.conf
@@ -1,43 +1,47 @@
-DocumentRoot ${PRFDB_HOME}
-DirectoryIndex index.html
-DeflateCompressionLevel 4
-DeflateMemLevel 9
-DeflateWindowSize 15
-AddType image/svg+xml .svg
-AddType image/svg+xml .svgz
 PerlPassEnv PRFDB_HOME
-PerlRequire ${PRFDB_HOME}/handler.pl
-SetOutputFilter DEFLATE
-<Location /images>
-  SetHandler default
-</Location>
-<Directory ${PRFDB_HOME}>
- Options +Indexes
-</Directory>
-<Directory ${PRFDB_HOME}/*/images>
- SetOutputFilter DEFLATE
- SetHandler default-handler
- Options -ExecCGI -Indexes
-</Directory>
-<Directory ${PRFDB_HOME}/*/html>
- SetOutputFilter DEFLATE
- SetHandler default-handler
- Options -ExecCGI -Indexes
-</Directory>
-Alias / "${PRFDB_HOME}/"
-<Directory ${PRFDB_HOME}>
+NameVirtualHost ${PRFDB_IP}:80
+<VirtualHost  ${PRFDB_IP}:80>
+ ServerName ${PRFDB_NAME}
+ DocumentRoot ${PRFDB_HOME}
  DirectoryIndex index.html
-</Directory>
-<LocationMatch "(\.html|\.txt|\.pl|\.js)$">
+ DeflateCompressionLevel 4
+ DeflateMemLevel 9
+ DeflateWindowSize 15
+ AddType image/svg+xml .svg
+ AddType image/svg+xml .svgz
+ PerlRequire ${PRFDB_HOME}/handler.pl
  SetOutputFilter DEFLATE
- SetHandler perl-script
- PerlHandler PRFdb::Handler
-</LocationMatch>
-<LocationMatch "(\.svg|\.png)$">
- SetOutputFilter DEFLATE
- SetHandler default-handler
-</LocationMatch>
-<LocationMatch "(\.m(html|txt|pl)|dhandler|autohandler)$">
- SetHandler perl-script
- PerlInitHandler Apache::Constants::NOT_FOUND
-</LocationMatch>
+ <Location /images>
+   SetHandler default
+ </Location>
+ <Directory ${PRFDB_HOME}>
+  Options +Indexes
+ </Directory>
+ <Directory ${PRFDB_HOME}/*/images>
+  SetOutputFilter DEFLATE
+  SetHandler default-handler
+  Options -ExecCGI -Indexes
+ </Directory>
+ <Directory ${PRFDB_HOME}/*/html>
+  SetOutputFilter DEFLATE
+  SetHandler default-handler
+  Options -ExecCGI -Indexes
+ </Directory>
+ Alias / "${PRFDB_HOME}/"
+ <Directory ${PRFDB_HOME}>
+  DirectoryIndex index.html
+ </Directory>
+ <LocationMatch "(\.html|\.txt|\.pl|\.js)$">
+  SetOutputFilter DEFLATE
+  SetHandler perl-script
+  PerlHandler PRFdb::Handler
+ </LocationMatch>
+ <LocationMatch "(\.svg|\.png)$">
+  SetOutputFilter DEFLATE
+  SetHandler default-handler
+ </LocationMatch>
+ <LocationMatch "(\.m(html|txt|pl)|dhandler|autohandler)$">
+  SetHandler perl-script
+  PerlInitHandler Apache::Constants::NOT_FOUND
+ </LocationMatch>
+</VirtualHost>
