--- a/prfdb_httpd.conf
+++ b/prfdb_httpd.conf
@@ -1,3 +1,6 @@
+## This requires that PRFDB_HOME, PRFDB_IP, and PRFDB_NAME be defined in
+## either /etc/sysconfig/httpd, /etc/init.d/httpd, or /etc/apache2/passenv
+## depending on your httpd
 PerlPassEnv PRFDB_HOME
 NameVirtualHost ${PRFDB_IP}:80
 <VirtualHost  ${PRFDB_IP}:80>
