--- a/prfdb_httpd.conf
+++ b/prfdb_httpd.conf
@@ -1,9 +1,11 @@
 ## This requires that PRFDB_HOME, PRFDB_IP, and PRFDB_NAME be defined in
 ## either /etc/sysconfig/httpd, /etc/init.d/httpd, or /etc/apache2/passenv
 ## depending on your httpd
+## Also enable deflate, on debian based systems this is done by symlinking it from /etc/apache2/mods-available to mods-enabled
+## Finally make sure to create the directories /tmp/sessions/data and /tmp/sessions/locks and make them writable by the apache user
 PerlPassEnv PRFDB_HOME
 NameVirtualHost ${PRFDB_IP}:80
-<VirtualHost  ${PRFDB_IP}:80>
+<VirtualHost  ${PRFDB_NAME}:80>
  ServerName ${PRFDB_NAME}
  DocumentRoot ${PRFDB_HOME}
  DirectoryIndex index.html
