using jquery for searches

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -36,12 +36,12 @@ NameVirtualHost ${PRFDB_IP}:80
  <Directory ${PRFDB_HOME}>
   DirectoryIndex index.html
  </Directory>
- <LocationMatch "(\.html|\.txt|\.pl|\.js)$">
+ <LocationMatch "(\.html|\.txt|\.pl)$">
   SetOutputFilter DEFLATE
   SetHandler perl-script
   PerlHandler PRFdb::Handler
  </LocationMatch>
- <LocationMatch "(\.svg|\.png)$">
+ <LocationMatch "(\.js|\.gif|\.svg|\.png)$">
   SetOutputFilter DEFLATE
   SetHandler default-handler
  </LocationMatch>
