big cleanup and reorganization

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -1,8 +1,16 @@
 ## This requires that PRFDB_HOME, PRFDB_IP, and PRFDB_NAME be defined in
 ## either /etc/sysconfig/httpd, /etc/init.d/httpd, or /etc/apache2/passenv
 ## depending on your httpd
-## Also enable deflate, on debian based systems this is done by symlinking it from /etc/apache2/mods-available to mods-enabled
-## Finally make sure to create the directories /tmp/sessions/data and /tmp/sessions/locks and make them writable by the apache user
+## On my system, this is done by adding
+## export PRFDB_HOME=/path/to/prfdb
+## export PRFDB_NAME=hostname_of_prfdb
+## export PRFDB_IP=ipadd.of.prfdb
+## to the file /etc/apache2/envvars
+## Also enable deflate, on debian based systems this is done by symlinking
+## it from /etc/apache2/mods-available to mods-enabled
+## Finally make sure to create the directories /tmp/sessions/data and
+## /tmp/sessions/locks and make them writable by the apache user
+
 PerlPassEnv PRFDB_HOME
 NameVirtualHost ${PRFDB_IP}:80
 <VirtualHost  ${PRFDB_NAME}:80>
