small improvements to the prfdb installation

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -12,8 +12,8 @@
 ## /tmp/sessions/locks and make them writable by the apache user
 
 PerlPassEnv PRFDB_HOME
-NameVirtualHost ${PRFDB_IP}:80
-<VirtualHost  ${PRFDB_NAME}:80>
+NameVirtualHost ${PRFDB_NAME}:80
+<VirtualHost  ${PRFDB_IP}:80>
  ServerName ${PRFDB_NAME}
  DocumentRoot ${PRFDB_HOME}
  DirectoryIndex index.html
@@ -28,7 +28,10 @@ NameVirtualHost ${PRFDB_IP}:80
    SetHandler default
  </Location>
  <Directory ${PRFDB_HOME}>
-  Options +Indexes
+  Options +Indexes FollowSymLinks MultiViews
+  AllowOverride All
+  Order allow,deny
+  allow from all
  </Directory>
  <Directory ${PRFDB_HOME}/*/images>
   SetOutputFilter DEFLATE
