some small changes for readability

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -36,7 +36,7 @@ NameVirtualHost ${PRFDB_NAME}:80
  <Directory ${PRFDB_HOME}/*/images>
   SetOutputFilter DEFLATE
   SetHandler default-handler
-  Options -ExecCGI -Indexes
+  Options -ExecCGI Indexes
  </Directory>
  <Directory ${PRFDB_HOME}/*/html>
   SetOutputFilter DEFLATE
