saving flot images doesn't quite work correctly, but close.

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -16,6 +16,7 @@ NameVirtualHost ${PRFDB_NAME}:80
 <VirtualHost  ${PRFDB_IP}:80>
  ServerName ${PRFDB_NAME}
  DocumentRoot ${PRFDB_HOME}
+ LimitRequestLine 40940
  DirectoryIndex index.html
  DeflateCompressionLevel 4
  DeflateMemLevel 9
