changes to add the printing of some simple stats about the db

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -53,7 +53,7 @@ NameVirtualHost ${PRFDB_NAME}:80
   SetHandler perl-script
   PerlHandler PRFdb::Handler
  </LocationMatch>
- <LocationMatch "(\.js|\.gif|\.svg|\.png)$">
+ <LocationMatch "(\.json|\.js|\.gif|\.svg|\.png)$">
   SetOutputFilter DEFLATE
   SetHandler default-handler
  </LocationMatch>
