--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -48,7 +48,7 @@ NameVirtualHost ${PRFDB_NAME}:80
  <Directory ${PRFDB_HOME}>
   DirectoryIndex index.html
  </Directory>
- <LocationMatch "(\.html|\.txt|\.pl)$">
+ <LocationMatch "(\.html|\.txt)$">
   SetOutputFilter DEFLATE
   SetHandler perl-script
   PerlHandler PRFdb::Handler
@@ -57,7 +57,12 @@ NameVirtualHost ${PRFDB_NAME}:80
   SetOutputFilter DEFLATE
   SetHandler default-handler
  </LocationMatch>
- <LocationMatch "(\.m(html|txt|pl)|dhandler|autohandler)$">
+ <LocationMatch "(\.sh|prf_daemon|\.conf|\.pl)$">
+  SetOutputFilter DEFLATE
+  SetHandler perl-script
+  PerlHandler PRFdb::NotAllowed
+ </LocationMatch>
+ <LocationMatch "(\.(html|txt|pl)|dhandler|autohandler)$">
   SetHandler perl-script
   PerlInitHandler Apache::Constants::NOT_FOUND
  </LocationMatch>
