added some catches for 404

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -57,13 +57,13 @@ NameVirtualHost ${PRFDB_NAME}:80
   SetOutputFilter DEFLATE
   SetHandler default-handler
  </LocationMatch>
- <LocationMatch "(\.sh|prf_daemon|\.conf|\.pl)$">
-  SetOutputFilter DEFLATE
-  SetHandler perl-script
-  PerlHandler PRFdb::NotAllowed
- </LocationMatch>
  <LocationMatch "(\.(html|txt|pl)|dhandler|autohandler)$">
   SetHandler perl-script
   PerlInitHandler Apache::Constants::NOT_FOUND
+ </LocationMatch>
+ <LocationMatch "(backup\/.*|apache\/.*|blib\/.*|contrib\/.*|bin\/.*|work\/.*|src\/.*|lib\/.*|\.sh|prf_daemon|\.conf|\.pl)$">
+  SetOutputFilter DEFLATE
+  SetHandler perl-script
+  PerlHandler PRFdb::NotAllowed
  </LocationMatch>
 </VirtualHost>
