small changes to the apache options, added a little error handling for snoopy people.

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -25,6 +25,12 @@ NameVirtualHost ${PRFDB_NAME}:80
  AddType image/svg+xml .svgz
  PerlRequire ${PRFDB_HOME}/handler.pl
  SetOutputFilter DEFLATE
+
+  <FilesMatch ^.*(!\.).*$>
+    Order allow,deny
+    Deny from all
+  </FilesMatch> 
+
  <Location /images>
    SetHandler default
  </Location>
@@ -57,13 +63,13 @@ NameVirtualHost ${PRFDB_NAME}:80
   SetOutputFilter DEFLATE
   SetHandler default-handler
  </LocationMatch>
- <LocationMatch "(\.(html|txt|pl)|dhandler|autohandler)$">
-  SetHandler perl-script
-  PerlInitHandler Apache::Constants::NOT_FOUND
- </LocationMatch>
  <LocationMatch "(backup\/.*|apache\/.*|blib\/.*|contrib\/.*|bin\/.*|work\/.*|src\/.*|lib\/.*|\.sh|prf_daemon|\.conf|\.pl)$">
   SetOutputFilter DEFLATE
   SetHandler perl-script
   PerlHandler PRFdb::NotAllowed
+ </LocationMatch>
+ <LocationMatch "(\.m(html|txt|pl)|dhandler|autohandler)$">
+  SetHandler perl-script
+  PerlInitHandler Apache::Constants::NOT_FOUND
  </LocationMatch>
 </VirtualHost>
