working on making this more compatible with bioperl Adding more flexibility vis a vis file formats and folding programs

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -26,50 +26,56 @@ NameVirtualHost ${PRFDB_NAME}:80
  PerlRequire ${PRFDB_HOME}/handler.pl
  SetOutputFilter DEFLATE
 
-  <FilesMatch ^.*(!\.).*$>
-    Order allow,deny
-    Deny from all
-  </FilesMatch> 
+#  <FilesMatch ^.*(!\.).*$>
+#    Order allow,deny
+#    Deny from all
+#  </FilesMatch> 
 
  <Location /images>
    SetHandler default
  </Location>
+
+ Alias / "${PRFDB_HOME}/"
  <Directory ${PRFDB_HOME}>
   Options +Indexes FollowSymLinks MultiViews
+  DirectoryIndex index.html
   AllowOverride All
   Order allow,deny
   allow from all
  </Directory>
+
  <Directory ${PRFDB_HOME}/*/images>
   SetOutputFilter DEFLATE
   SetHandler default-handler
   Options -ExecCGI Indexes
  </Directory>
+
  <Directory ${PRFDB_HOME}/*/html>
   SetOutputFilter DEFLATE
   SetHandler default-handler
   Options -ExecCGI -Indexes
  </Directory>
- Alias / "${PRFDB_HOME}/"
- <Directory ${PRFDB_HOME}>
-  DirectoryIndex index.html
- </Directory>
- <LocationMatch "(\.html|\.txt)$">
+
+ <LocationMatch "(\.html)$">
   SetOutputFilter DEFLATE
   SetHandler perl-script
   PerlHandler PRFdb::Handler
  </LocationMatch>
- <LocationMatch "(\.json|\.js|\.gif|\.svg|\.png)$">
+
+ <LocationMatch "(\.txt|\.json|\.js|\.gif|\.svg|\.png)$">
   SetOutputFilter DEFLATE
   SetHandler default-handler
  </LocationMatch>
+
  <LocationMatch "(backup\/.*|apache\/.*|blib\/.*|contrib\/.*|bin\/.*|work\/.*|src\/.*|lib\/.*|\.sh|prf_daemon|\.conf|\.pl)$">
   SetOutputFilter DEFLATE
   SetHandler perl-script
   PerlHandler PRFdb::NotAllowed
  </LocationMatch>
+
  <LocationMatch "(\.m(html|txt|pl)|dhandler|autohandler)$">
   SetHandler perl-script
   PerlInitHandler Apache::Constants::NOT_FOUND
  </LocationMatch>
+
 </VirtualHost>
