--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -30,6 +30,9 @@ NameVirtualHost ${PRFDB_NAME}:80
 #    Order allow,deny
 #    Deny from all
 #  </FilesMatch> 
+ <Location />
+ Require local 
+ </Location>
 
  <Location /images>
    SetHandler default
@@ -37,7 +40,7 @@ NameVirtualHost ${PRFDB_NAME}:80
 
  Alias / "${PRFDB_HOME}/"
  <Directory ${PRFDB_HOME}>
-  Options +Indexes FollowSymLinks MultiViews
+  Options +Indexes +FollowSymLinks +MultiViews
   DirectoryIndex index.html
   AllowOverride All
   Order allow,deny
@@ -47,7 +50,7 @@ NameVirtualHost ${PRFDB_NAME}:80
  <Directory ${PRFDB_HOME}/*/images>
   SetOutputFilter DEFLATE
   SetHandler default-handler
-  Options -ExecCGI Indexes
+  Options -ExecCGI +Indexes
  </Directory>
 
  <Directory ${PRFDB_HOME}/*/html>
