I just realized I am a crack smoker.  The turner values were only added through a contrib/ script

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -31,7 +31,7 @@ NameVirtualHost ${PRFDB_NAME}:80
 #    Deny from all
 #  </FilesMatch> 
  <Location />
- Require local 
+ Require all granted
  </Location>
 
  <Location /images>
