a bunch of small changes to make this work on a mac.

--- a/apache/xprfdb.conf
+++ b/apache/xprfdb.conf
@@ -13,7 +13,8 @@
 
 PerlPassEnv PRFDB_HOME
 NameVirtualHost ${PRFDB_NAME}:80
-<VirtualHost  ${PRFDB_IP}:80>
+##<VirtualHost  ${PRFDB_IP}:80>
+<VirtualHost  *:80>
  ServerName ${PRFDB_NAME}
  DocumentRoot ${PRFDB_HOME}
  LimitRequestLine 40940
